<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/walk_through_pager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/welcome_horizontal_margin"
            android:layout_marginBottom="@dimen/welcome_vertical_margin"
            android:text="@string/btn_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <me.relex.circleindicator.CircleIndicator3
            android:id="@+id/tab_indicator"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/welcome_horizontal_margin"
            app:ci_drawable="@drawable/indicator_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_next">

        </me.relex.circleindicator.CircleIndicator3>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_get_started"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding_small"
            android:layout_marginEnd="@dimen/default_padding_small"
            android:layout_marginBottom="@dimen/default_padding"
            android:padding="@dimen/default_padding_tiny"
            android:text="@string/btn_get_started"
            android:textAllCaps="false"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btn_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/welcome_horizontal_margin"
            android:paddingTop="@dimen/welcome_vertical_margin"
            android:paddingRight="@dimen/welcome_horizontal_margin"
            android:paddingBottom="@dimen/welcome_vertical_margin"
            android:text="@string/tv_skip"
            android:textAppearance="?attr/textAppearanceLabelLarge"
            android:textColor="?attr/colorOnBackground"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
